RESOLVED FIXED158090
CRASH at WebCore::WebPlaybackSessionModelMediaElement::selectAudioMediaOption() + 104
https://bugs.webkit.org/show_bug.cgi?id=158090
Summary CRASH at WebCore::WebPlaybackSessionModelMediaElement::selectAudioMediaOption...
Jer Noble
Reported 2016-05-25 14:20:17 PDT
CRASH at WebCore::WebPlaybackSessionModelMediaElement::selectAudioMediaOption() + 104
Attachments
Patch (1.96 KB, patch)
2016-05-25 14:21 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2016-05-25 14:20:42 PDT
Jer Noble
Comment 2 2016-05-25 14:21:55 PDT
WebKit Commit Bot
Comment 3 2016-05-25 14:55:54 PDT
Comment on attachment 279811 [details] Patch Clearing flags on attachment: 279811 Committed r201403: <http://trac.webkit.org/changeset/201403>
WebKit Commit Bot
Comment 4 2016-05-25 14:55:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.