CRASH at WebCore::WebPlaybackSessionModelMediaElement::selectAudioMediaOption() + 104 https://bugs.webkit.org/show_bug.cgi?id=158090 <rdar://problem/26388936>

Reviewed by Eric Carlson.

Null-check m_mediaElement before using.

* platform/cocoa/WebPlaybackSessionModelMediaElement.mm:
(WebPlaybackSessionModelMediaElement::selectAudioMediaOption):
(WebPlaybackSessionModelMediaElement::selectLegibleMediaOption):


Canonical link: https://commits.webkit.org/176206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201403 268f45cc-cd09-0410-ab3c-d52691b4dbfc