Source/WebCore/platform/cocoa/WebPlaybackSessionModelMediaElement.mm
@@ -229,6 +229,9 @@ void WebPlaybackSessionModelMediaElement::endScanning()
 
 void WebPlaybackSessionModelMediaElement::selectAudioMediaOption(uint64_t selectedAudioIndex)
 {
+    if (!m_mediaElement)
+        return;
+
     ASSERT(selectedAudioIndex < std::numeric_limits<size_t>::max());
     AudioTrack* selectedAudioTrack = nullptr;
 
@@ -244,6 +247,9 @@ void WebPlaybackSessionModelMediaElement::selectAudioMediaOption(uint64_t select
 
 void WebPlaybackSessionModelMediaElement::selectLegibleMediaOption(uint64_t index)
 {
+    if (!m_mediaElement)
+        return;
+
     ASSERT(index < std::numeric_limits<size_t>::max());
     TextTrack* textTrack = nullptr;
 
